--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,6 @@
 all: main.cc
 	g++ -static -s -std=c++11 -O2 -o search main.cc Protocol.cpp ClientSocket.cpp anqi.cc
-	mv search ../EnterRoom/Search
+	cp search ../EnterRoom/Search
+	cp search ../CreateRoom/Search
 clean:
 	rm -r ../EnterRoom/Search/search
